--- a/index.html
+++ b/index.html
@@ -2,17 +2,26 @@
 	<head>
 		<script src="js/mail-generator.js"></script>
 		<link href="css/style.css" rel="stylesheet" media="screen">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <script>
       window.onload = function(){
         // ALL OF YOUR JAVASCRIPT CODE SHOULD GO HERE. 
         // We have to use window.onload so your JavaScript doesn't execute until the page has loaded and all HTML has been downloaded to your browser
-        
       };
     </script>
 	</head>
 	<body>
-		<div class="container" id="main">
-			Build Me!
-		</div>
+	
+<div id="topBar"class="topBar">
+<div id="g-Mail">
+	<h1 id="title"class="topBar">-mail</h1>
+<img id='pic'class='topBars'src="assets/gangstarr.jpg" alt="'
+		Gangstarr mail'"></div>
+<div id="sBar"class="searchBox">
+				<form ><input type="text" name="search"placeholder="Search..."></form>
+				<a href="#" id='btn'class="searchBtn"></a>
+				<i id='sBtn'class="fas fa-search"></i>
+			</div>
+</div>	
 	</body>
 </html>
