created layout and search bar

--- a/index.html
+++ b/index.html
@@ -15,13 +15,20 @@
 <div id="topBar"class="topBar">
 <div id="g-Mail">
 	<h1 id="title"class="topBar">-mail</h1>
-<img id='pic'class='topBars'src="assets/gangstarr.jpg" alt="'
-		Gangstarr mail'"></div>
+<img id='pic'class='topBars'src="assets/gangstarr.jpg" alt="
+		Gangstarr"></div>
 <div id="sBar"class="searchBox">
 				<form ><input type="text" name="search"placeholder="Search..."></form>
 				<a href="#" id='btn'class="searchBtn"></a>
 				<i id='sBtn'class="fas fa-search"></i>
 			</div>
 </div>	
+<div id="subMail"class="category">
+	<div id="cats" class="category"></div>
+</div>
+<div id="mainMail" class="Mail"></div>
+<div id="leftBar" class="lBar"></div>
+<div id="rightBar" class="rBar"></div>
 	</body>
-</html>
+
+</html> 
