--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
       window.onload = function(){
         // ALL OF YOUR JAVASCRIPT CODE SHOULD GO HERE. 
 				// We have to use window.onload so your JavaScript doesn't execute until the page has loaded and all HTML has been downloaded to your browser
-			console.log(window.geemails[0]);
-			console.table(window.geemails);
+			// console.log(window.geemails[0]);
+			// console.table(window.geemails);
+		console.log(getNewMessage())
+
 
 			for(var i=0;i<window.geemails.length;i++){
 				var objects=document.createElement('div');
 				objects.className='content';
 				objects.addEventListener('click', showMsg);
 				main.appendChild(objects);
+				
 			var dateBox=document.createElement('div');
 			dateBox.className='date';
 			dateBox.innerHTML=window.geemails[i].date;
@@ -29,13 +32,14 @@
 			senderBox.className='sender';
 			senderBox.innerHTML=window.geemails[i].sender;
 			objects.appendChild(senderBox);
-			
-			
+						
 			var msgBox=document.createElement('div');
 			msgBox.className='message'
 			msgBox.innerHTML=window.geemails[i].body;
 			objects.appendChild(msgBox);
 		}
+		
+
 		function showMsg(){
 			var msgContent=this.querySelectorAll('.message')[0];
 			if(msgContent.style.display==='block'){
@@ -44,9 +48,12 @@
 				msgContent.style.display='block'
 			}
 		}
+		// var counter = document.getElementById('counter');
+		// 		var messageCount = window.geemails.length;
+		// 		document.getElementById('counter').innerHTML = [messageCount] + ' New Messages!';
+
 
 	};
-		
 		
 		
 		</script>
@@ -54,28 +61,58 @@
 	<body>
 	<div id="main" class="mainMsg"></div>
 <div id="topBar"class="topBar">
+
 <div id="g-Mail">
-	<h1 id="title"class="topBar">-mail</h1>
-<img id='pic'class='topBars'src="assets/gangstarr.jpg" alt="
-		Gangstarr"></div>
+	<h1 id="title"class="topBar">Gee-mail</h1>
+<!-- <img id='pic'class='topBars'src="assets/gangstarr.jpg" alt="
+		Gangstarr"> -->
+	</div>
 <div id="sBar"class="searchBox">
 				<form ><input type="text" name="search"placeholder="Search..."></form>
 				<a href="#" id='btn'class="searchBtn"></a>
 				<i id='sBtn'class="fas fa-search"></i>
 			</div>
 </div>	
+
 <div id="catMenu"class="category">
 	<div id="cats" class="category"></div>
 </div>
+<!-- main mail box no real function -->
 <div id="mainMail" class="mail">
 	<div id="mailHere" class="mail"></div>
 </div>
+<!-- left side bar -->
 <div id="leftBar" class="lBar">
-	<div id="innerLeftBar" class="lBar"></div>
+	<div id="innerLeftBar" class="lBar">
+		<div id="inbox"class='inboxlb'>Inbox</div>
+		<div id="starred"class=starlb>Starred</div>
+		<div id="snoozed"class='snoozelb'>Snoozed</div>
+		<div id="important"class='implb'>Important</div>
+		<div id="sent"class='sentlb'>Sent</div>
+		<div id="drafts"class='draftlb'>Drafts</div>
+		<div id="categories"class='catlb'>Categories</div>
+		<div id="personal"class='perslb'>Personal</div>
+		<div id="randomList1" class="list1"><li class="list1">random text</li>
+		<li class="list1">this</li>
+		<li class="list1">was</li>
+		<li class="list1">used</li>
+		<li class="list1">to </li>
+		<li class="list1">show</li>
+		<li class="list1">the</li>
+		<li class="list1">overflow</li>
+		<li class="list1">that</li>
+		<li class="list1">was</li>
+		<li class="list1">it</li>
+		<li class="list1">random text</li></div>
+	</div>
+
 </div>
+
+<!-- right side bar -->
 <div id="rightBar" class="rBar">
 	<div id="innerRightBar" class="rBar"></div>
 </div>
+
 	</body>
 
 </html> 
