commented on everything to categorize

--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@
 	</head>
 	<body>
 	<div id="main" class="mainMsg"></div>
+	
+	<!-- this is the top menu bar portion -->
 <div id="topBar"class="topBar">
 
 <div id="g-Mail">
 	<h1 id="title"class="topBar">Gee-mail</h1>
-<!-- <img id='pic'class='topBars'src="assets/gangstarr.jpg" alt="
-		Gangstarr"> -->
+<img id='pic'class='topBars'src="assets/gangstarr.jpg" alt="
+		Gangstarr">
 	</div>
 <div id="sBar"class="searchBox">
 				<form ><input type="text" name="search"placeholder="Search..."></form>
@@ -73,14 +75,20 @@
 				<i id='sBtn'class="fas fa-search"></i>
 			</div>
 </div>	
+<!-- this is the top menu bar portion -->
 
+<!-- this is the category menu above the main mail box -->
 <div id="catMenu"class="category">
 	<div id="cats" class="category"></div>
 </div>
+<!-- this is the category menu above the main mail box -->
+
 <!-- main mail box no real function -->
 <div id="mainMail" class="mail">
 	<div id="mailHere" class="mail"></div>
 </div>
+<!-- main mail box no real function -->
+
 <!-- left side bar -->
 <div id="leftBar" class="lBar">
 	<div id="innerLeftBar" class="lBar">
@@ -105,14 +113,14 @@
 		<li class="list1">it</li>
 		<li class="list1">random text</li></div>
 	</div>
-
 </div>
+<!-- left side bar -->
 
 <!-- right side bar -->
 <div id="rightBar" class="rBar">
 	<div id="innerRightBar" class="rBar"></div>
 </div>
-
+<!-- right side bar -->
 	</body>
 
 </html> 
