left side bar creation, not finished yet

--- a/index.html
+++ b/index.html
@@ -100,18 +100,19 @@
 		<div id="drafts"class='draftlb'>Drafts</div>
 		<div id="categories"class='catlb'>Categories</div>
 		<div id="personal"class='perslb'>Personal</div>
-		<div id="randomList1" class="list1"><li class="list1">random text</li>
-		<li class="list1">this</li>
-		<li class="list1">was</li>
-		<li class="list1">used</li>
-		<li class="list1">to </li>
-		<li class="list1">show</li>
-		<li class="list1">the</li>
-		<li class="list1">overflow</li>
-		<li class="list1">that</li>
-		<li class="list1">was</li>
-		<li class="list1">it</li>
-		<li class="list1">random text</li></div>
+		<div id="randomList1" class="list1">
+		<li class="list2">random text</li>
+		<li class="list2">this</li>
+		<li class="list2">was</li>
+		<li class="list2">used</li>
+		<li class="list2">to </li>
+		<li class="list2">show</li>
+		<li class="list2">the</li>
+		<li class="list2">overflow</li>
+		<li class="list2">......that</li>
+		<li class="list2">was</li>
+		<li class="list2">it</li>
+		<li class="list2">random text</li></div>
 	</div>
 </div>
 <!-- left side bar -->
