--- a/index.html
+++ b/index.html
@@ -137,8 +137,19 @@
 	
 
 	<!-- this is the category menu above the main mail box -->
-<div id="catMenu"class="category">
-	<div id="cats" class="category"></div>
+<div id="catMenu">
+	<div id="cat" class="category">
+	<div id="cat1" class="category1">
+		<div id="cat1x" class="category1">Primary</div>
+	</div>
+	<div id="cat2" class="category2">
+		<div id="cat2x" class="category2">Work</div>
+	</div>
+	<div id="cat3" class="category3">
+		<div id="cat3x" class="category3">Fun</div>
+	</div>
+	</div>
+
 </div>
 	
 	<!-- main mail box no real function -->
@@ -148,7 +159,7 @@
 
 
 	<!-- left side bar -->
-<div id="leftBar" class="lBar">
+<div id="leftBar" >
 	<div id="innerLeftBar" class="lBar">
 		<div id="inbox"class='inboxlb'>Inbox</div>
 		<div id="starred"class=starlb>Starred</div>
@@ -177,7 +188,12 @@
 
 	<!-- right side bar -->
 <div id="rightBar" class="rBar">
-	<div id="innerRightBar" class="rBar"></div>
+	<div id="innerRightBar" class="rBar">
+		<div id="rightObj1" class="rightObj1">these</div>
+		<div id="rightObj2" class="rightObj2">should</div>
+		<div id="rightObj3" class="rightObj3">be </div>
+		<div id="rightObj4" class="rightObj4">pictures</div>
+	</div>
 </div>
 
 	</body>
